[gd_scene load_steps=4 format=3 uid="uid://bmw2jt4bkto6h"]

[ext_resource type="Script" path="res://scripts/tests/Task10_ArtworkCreationTest.gd" id="1_0hnxv"]
[ext_resource type="PackedScene" uid="uid://bqxvn8y7qxqxr" path="res://scenes/Player.tscn" id="2_abc123"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(80, 80)

[node name="Task10_ArtworkCreationTest" type="Node2D"]
script = ExtResource("1_0hnxv")

[node name="Player" parent="." instance=ExtResource("2_abc123")]
position = Vector2(400, 300)

[node name="ArtworkStation" type="StaticBody2D" parent="."]
position = Vector2(300, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArtworkStation"]
shape = SubResource("RectangleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="ArtworkStation"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.6, 0.4, 0.8, 1)

[node name="Label" type="Label" parent="ArtworkStation"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = -30.0
text = "Artwork Station"
horizontal_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Instructions" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 600.0
offset_bottom = -20.0
grow_vertical = 0
text = "TASK 10: ARTWORK CREATION TEST
Press T to add test materials
Press E near station to create artwork
Press I to view inventory
Press P to view portfolio"
vertical_alignment = 2

[node name="InteractionPrompt" type="Label" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
text = "Press E to interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PortfolioUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
